2011-08-11  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/launch/SystemTapOptionsTab.java:
		Set up verbosity level.
	* src/org/eclipse/linuxtools/callgraph/launch/ConfigurationOptionsSetter.java:
		Handle verbosity level.
	 
2011-08-10  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/launch/SystemTapLaunchShortcut.java:
		(existsConfiguration): Clean up function.
		(finishLaunch): Do not create a launch configuration per profiling run.
	* src/org/eclipse/linuxtools/callgraph/launch/LaunchWizard.java:
	* src/org/eclipse/linuxtools/callgraph/launch/LaunchStapGraph:
		Reflect new changes.

2010-06-02  Roland Grunberg  <rgrunber@redhat.com>

	* build.properties: Externalize some strings in the Manifest.
	* META-INF/MANIFEST.MF: See above
	* plugin.properties: See above
	* plugin.xml: See above

2010-06-01  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/launch/messages.properties: Externalize string.
	* src/org/eclipse/linuxtools/callgraph/launch/SystemTapLaunchConfigurationDelegate.java'
		(finishLaunch): Display error message pop-up when stap may not be on the system path
		or installed.

2010-04-13  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/launch/SystemTapLaunchConfigurationDelegate.java:
		Clean up code.

2010-03-05  Charley Wang  <chwang@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/launch/SystemTapLaunchConfigurationDelegate.java: Stop passsing a useless argument to finishLaunch

2010-03-02  Charley Wang  <chwang@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/launch/SystemTapLaunchConfigurationDelegate.java (launch): Toss out a message dialog if output path is broken.

2010-02-26  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/launch/SystemTapLaunchShortcut.java:
		Cleanup code.

2010-02-23  Charley Wang  <chwang@redhat.com>
