@@ -125,3 +125,7 @@ SystemTapOptionsTab.SuppresionsFile=Select a Suppressions File
 SystemTapOptionsTab.TargetPID=Target process pid:
 SystemTapOptionsTab.WorkspaceButton=Browse Workspace
 SystemTapOptionsTab.WorkspaceButton2=Browse Workspace
+SystemtTapOptionsTab.Callgraph=Callgraph
+SystemtTapOptionsTab.Choose_a_local_application=Choose a local application to profile
+SystemtTapOptionsTab.Binaries=Binaries:
+SystemtTapOptionsTab.Qualifier=Qualifier:
